apps/kube/keycloak/manifest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: keycloak
    labels:
        kbve.com/category: security
        kbve.com/stack: core
        pod-security.kubernetes.io/enforce: baseline
        pod-security.kubernetes.io/audit: restricted
        pod-security.kubernetes.io/warn: restricted
