apps/kube/keycloak/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: keycloak-http
    namespace: keycloak
    labels:
        app: keycloak
spec:
    type: ClusterIP
    selector:
        app: keycloak
    ports:
        - name: http
          port: 8080
          targetPort: http
