apps/kube/keycloak/manifest/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: keycloak-route
    namespace: keycloak
    labels:
        app: keycloak
spec:
    parentRefs:
        - name: kbve-gateway
          namespace: kbve
    hostnames:
        - sso.kbve.com
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: keycloak-http
                port: 8080
